Alterações na página attractions e roles

--- a/WaltDisneyManagement/src/main/resources/templates/index.html
+++ b/WaltDisneyManagement/src/main/resources/templates/index.html
@@ -45,7 +45,7 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a th:href="@{/index}" class="logo d-flex align-items-center">
         <img src="/img/logo.png" alt="">
         <span class="d-none d-lg-block">NiceAdmin</span>
       </a>
@@ -277,232 +277,76 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="index.html">
+        <a class="nav-link" th:href="@{/index}">
           <i class="bi bi-grid"></i>
-          <span>Dashboard</span>
+          <span>Home</span>
         </a>
       </li><!-- End Dashboard Nav -->
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-menu-button-wide"></i><span>Components</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="components-alerts.html">
-              <i class="bi bi-circle"></i><span>Alerts</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-accordion.html">
-              <i class="bi bi-circle"></i><span>Accordion</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-badges.html">
-              <i class="bi bi-circle"></i><span>Badges</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-breadcrumbs.html">
-              <i class="bi bi-circle"></i><span>Breadcrumbs</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-buttons.html">
-              <i class="bi bi-circle"></i><span>Buttons</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-cards.html">
-              <i class="bi bi-circle"></i><span>Cards</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-carousel.html">
-              <i class="bi bi-circle"></i><span>Carousel</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-list-group.html">
-              <i class="bi bi-circle"></i><span>List group</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-modal.html">
-              <i class="bi bi-circle"></i><span>Modal</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-tabs.html">
-              <i class="bi bi-circle"></i><span>Tabs</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-pagination.html">
-              <i class="bi bi-circle"></i><span>Pagination</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-progress.html">
-              <i class="bi bi-circle"></i><span>Progress</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-spinners.html">
-              <i class="bi bi-circle"></i><span>Spinners</span>
-            </a>
-          </li>
-          <li>
-            <a href="components-tooltips.html">
-              <i class="bi bi-circle"></i><span>Tooltips</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Components Nav -->
+      <li class="nav-heading">Parks</li>
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-journal-text"></i><span>Forms</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="forms-elements.html">
-              <i class="bi bi-circle"></i><span>Form Elements</span>
-            </a>
-          </li>
-          <li>
-            <a href="forms-layouts.html">
-              <i class="bi bi-circle"></i><span>Form Layouts</span>
-            </a>
-          </li>
-          <li>
-            <a href="forms-editors.html">
-              <i class="bi bi-circle"></i><span>Form Editors</span>
-            </a>
-          </li>
-          <li>
-            <a href="forms-validation.html">
-              <i class="bi bi-circle"></i><span>Form Validation</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Forms Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-layout-text-window-reverse"></i><span>Tables</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="tables-general.html">
-              <i class="bi bi-circle"></i><span>General Tables</span>
-            </a>
-          </li>
-          <li>
-            <a href="tables-data.html">
-              <i class="bi bi-circle"></i><span>Data Tables</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Tables Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-bar-chart"></i><span>Charts</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="charts-chartjs.html">
-              <i class="bi bi-circle"></i><span>Chart.js</span>
-            </a>
-          </li>
-          <li>
-            <a href="charts-apexcharts.html">
-              <i class="bi bi-circle"></i><span>ApexCharts</span>
-            </a>
-          </li>
-          <li>
-            <a href="charts-echarts.html">
-              <i class="bi bi-circle"></i><span>ECharts</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Charts Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-gem"></i><span>Icons</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="icons-bootstrap.html">
-              <i class="bi bi-circle"></i><span>Bootstrap Icons</span>
-            </a>
-          </li>
-          <li>
-            <a href="icons-remix.html">
-              <i class="bi bi-circle"></i><span>Remix Icons</span>
-            </a>
-          </li>
-          <li>
-            <a href="icons-boxicons.html">
-              <i class="bi bi-circle"></i><span>Boxicons</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Icons Nav -->
-
-      <li class="nav-heading">Pages</li>
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="users-profile.html">
-          <i class="bi bi-person"></i>
-          <span>Profile</span>
+      <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
+        <a class="nav-link collapsed" th:href="@{/parks/{parkName}(parkName=${'Magic Kingdom Park'})}">
+          <i class="bi bi-signpost"></i>
+          <span>Magic Kingdom</span>
         </a>
       </li><!-- End Profile Page Nav -->
 
-      <li class="nav-item">
+      <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
         <a class="nav-link collapsed" href="pages-faq.html">
-          <i class="bi bi-question-circle"></i>
-          <span>F.A.Q</span>
+          <i class="bi bi-signpost"></i>
+          <span>EPCOT</span>
         </a>
       </li><!-- End F.A.Q Page Nav -->
 
-      <li class="nav-item">
+      <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
         <a class="nav-link collapsed" href="pages-contact.html">
-          <i class="bi bi-envelope"></i>
-          <span>Contact</span>
+          <i class="bi bi-signpost"></i>
+          <span>Disney's Hollywood Studios</span>
         </a>
       </li><!-- End Contact Page Nav -->
 
-      <li class="nav-item">
+      <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
         <a class="nav-link collapsed" href="pages-register.html">
-          <i class="bi bi-card-list"></i>
-          <span>Register</span>
+          <i class="bi bi-signpost"></i>
+          <span>Disney's Animal Kingdom</span>
         </a>
       </li><!-- End Register Page Nav -->
 
-      <li class="nav-item">
+      <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
         <a class="nav-link collapsed" href="pages-login.html">
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Login</span>
+          <i class="bi bi-signpost"></i>
+          <span>Disney Springs</span>
         </a>
       </li><!-- End Login Page Nav -->
 
-      <li class="nav-item">
+      <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
+        <a class="nav-link collapsed" href="pages-blank.html">
+          <i class="bi bi-droplet"></i>
+          <span>Disney's Typhoon Lagoon</span>
+        </a>
+      </li><!-- End Blank Page Nav -->
+
+      <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
         <a class="nav-link collapsed" href="pages-error-404.html">
-          <i class="bi bi-dash-circle"></i>
-          <span>Error 404</span>
+          <i class="bi bi-droplet"></i>
+          <span>Disney's Blizzard Beach</span>
         </a>
       </li><!-- End Error 404 Page Nav -->
 
-      <li class="nav-item">
+      <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'PARKING'}">
         <a class="nav-link collapsed" href="pages-blank.html">
-          <i class="bi bi-file-earmark"></i>
-          <span>Blank</span>
+          <i class="bi bi-car-front"></i>
+          <span>Parking Cars 1</span>
         </a>
       </li><!-- End Blank Page Nav -->
+
+      <li class="nav-item" th:if="${role eq 'ADMIN' or role eq 'PARKING'}">
+        <a class="nav-link collapsed" th:href="@{/Cars/{parkName}(parkName=${'Parking Cars 2'})}">
+          <i class="bi bi-car-front"></i>
+          <span>Parking Cars 2</span>
+        </a>
+      </li><!-- End Error 404 Page Nav -->
 
     </ul>
 
@@ -532,7 +376,7 @@
             <!-- Magic Kingdom Park Card -->
 
 
-            <div class="col-xxl-4 col-xl-12" > <!--th:if="${role eq 'EMPLOYEE'}" -->
+            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
               <a th:href="@{/parks/{parkName}(parkName=${'Magic Kingdom Park'})}">
                 <div class="card info-card customers-card" style="background-image: url('/img/magicKingdomPark.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
@@ -543,7 +387,7 @@
             </div><!-- End Customers Card -->
 
             <!-- Epcot Card -->
-            <div class="col-xxl-4 col-xl-12" > <!--th:if="${role eq 'ADMIN'}" -->
+            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
 
               <div class="card info-card customers-card"  style="background-image: url('/img/epcot.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
@@ -556,7 +400,7 @@
             <!-- End Customers Card -->
 
             <!-- Disney's Hollywood Studios Park Card -->
-            <div class="col-xxl-4 col-xl-12">
+            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
 
               <div class="card info-card customers-card"  style="background-image: url('/img/hollywood.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
@@ -569,7 +413,7 @@
             <!-- End Customers Card -->
 
             <!-- Disney's Animal Kingdom Theme Park -->
-            <div class="col-xxl-4 col-xl-12">
+            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
 
               <div class="card info-card customers-card"  style="background-image: url('/img/animalKingdom.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
@@ -582,7 +426,7 @@
             <!-- End Customers Card -->
 
             <!-- Disney Springs Card -->
-            <div class="col-xxl-4 col-xl-12">
+            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
 
               <div class="card info-card customers-card"  style="background-image: url('/img/springs.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
@@ -595,7 +439,7 @@
             <!-- End Customers Card -->
 
             <!-- Disney's Typhoon Lagoon Water Park  Card -->
-            <div class="col-xxl-4 col-xl-12">
+            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
 
               <div class="card info-card customers-card"  style="background-image: url('/img/lagoon.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
@@ -608,7 +452,7 @@
             <!-- End Customers Card -->
 
             <!-- Disney's Blizzard Beach Water Park Card -->
-            <div class="col-xxl-4 col-xl-12">
+            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
 
               <div class="card info-card customers-card"  style="background-image: url('/img/blizzard.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
@@ -621,7 +465,7 @@
             <!-- End Customers Card -->
 
             <!-- Parque Estacionamento 1 Card -->
-            <div class="col-xxl-4 col-xl-12">
+            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'PARKING'}">
 
               <div class="card info-card customers-card"  style="background-image: url('/img/parque1.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
@@ -634,7 +478,7 @@
             <!-- End Customers Card -->
 
             <!-- Parque Estacionamento 2 Card -->
-            <div class="col-xxl-4 col-xl-12">
+            <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'PARKING'}">
               <a th:href="@{/Cars/{parkName}(parkName=${'Parking Cars 2'})}">
                 <div class="card info-card customers-card"  style="background-image: url('/img/parque2.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
