--- a/WaltDisneyManagement/src/main/resources/templates/teste.html
+++ b/WaltDisneyManagement/src/main/resources/templates/teste.html
@@ -8,7 +8,7 @@
     <script src="/webjars/stomp-websocket/2.3.3/stomp.min.js"></script>
     <script src="/webjars/sockjs-client/1.5.1/sockjs.min.js"></script>
 
-    <script src="/js/websocket-client.js"></script>
+    <script src="/js/magicKingdomJs.js"></script>
 </head>
 <body>
 <h1>Info magickingdom</h1>
