--- a/WaltDisneyManagement/src/main/resources/templates/index.html
+++ b/WaltDisneyManagement/src/main/resources/templates/index.html
@@ -377,8 +377,8 @@
 
 
             <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
-              <a th:href="@{/parks/{parkName}(parkName=${'Magic Kingdom Park'})}">
-                <div class="card info-card customers-card" style="background-image: url('/img/magicKingdomPark.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+              <a>
+                <div class="card info-card customers-card" data-parkname="Magic Kingdom Park" style="background-image: url('/img/magicKingdomPark.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Magic Kingdom Park</h5>
                   </div>
