--- a/WaltDisneyManagement/src/main/resources/templates/login.html
+++ b/WaltDisneyManagement/src/main/resources/templates/login.html
@@ -89,7 +89,7 @@
         console.log(loginDto);
         console.log(JSON.stringify(loginDto));
         // Fazer uma requisição ao servidor (pode usar AJAX ou Fetch API)
-        fetch("/login", {
+        fetch("/api/login", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
