--- a/WaltDisneyManagement/src/main/resources/templates/park.html
+++ b/WaltDisneyManagement/src/main/resources/templates/park.html
@@ -377,8 +377,8 @@
 
             <!-- railroad -->
             <div class="col-xxl-4 col-xl-12">
-              <a th:href="@{/parks/{parkName}/attractions/{attractionName}(parkName=${'Magic Kingdom Park'}, attractionName=${'Walt Disney World Railroad'})}">
-                <div class="card info-card customers-card" style="background-image: url('/img/WaltDisneyRailroad.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+              <a>
+                <div class="card info-card customers-card" data-attraction="Walt Disney World Railroad" style="background-image: url('/img/WaltDisneyRailroad.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Walt Disney World Railroad</h5>
                   </div>
