remove wrong color from statusCard

--- a/WaltDisneyManagement/src/main/resources/templates/attraction.html
+++ b/WaltDisneyManagement/src/main/resources/templates/attraction.html
@@ -408,7 +408,7 @@
 
             <!-- Customers Card -->
             <div class="col-xxl-4 col-xl-12">
-              <div id="statusCard" class="card info-card" th:classappend="${status == 'Closed' ? 'bg-danger' : 'bg-success-dark'}" style="cursor: pointer;" th:data-attraction="${attraction}" onclick="sendMessage(this)">                <div class="card-body">
+              <div id="statusCard" class="card info-card" style="cursor: pointer;" th:data-attraction="${attraction}" onclick="sendMessage(this)">                <div class="card-body">
                   <h5 class="card-title">Status</h5>
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
