Rabbitmq dynamic consumer for all parks and attractions; new queue names

--- a/WaltDisneyManagement/src/main/resources/templates/index.html
+++ b/WaltDisneyManagement/src/main/resources/templates/index.html
@@ -378,9 +378,9 @@
 
             <div class="col-xxl-4 col-xl-12" th:if="${role eq 'ADMIN' or role eq 'TECHNICIAN'}">
               <a>
-                <div class="card info-card customers-card" data-parkname="Magic Kingdom Park" style="background-image: url('/img/magicKingdomPark.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" data-parkname="Magic Kingdom" style="cursor: pointer;background-image: url('/img/magicKingdomPark.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
-                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Magic Kingdom Park</h5>
+                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Magic Kingdom</h5>
                   </div>
                 </div>
               </a>
@@ -392,7 +392,7 @@
               <div class="card info-card customers-card"  style="background-image: url('/img/epcot.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">EPCOT Park</h5>
+                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">EPCOT</h5>
                 </div>
               </div>
 
@@ -405,7 +405,7 @@
               <div class="card info-card customers-card"  style="background-image: url('/img/hollywood.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Hollywood Studios Park</h5>
+                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Hollywood Studios</h5>
                 </div>
               </div>
 
@@ -418,7 +418,7 @@
               <div class="card info-card customers-card"  style="background-image: url('/img/animalKingdom.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Animal Kingdom Theme Park</h5>
+                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Animal Kingdom</h5>
                 </div>
               </div>
 
@@ -431,7 +431,7 @@
               <div class="card info-card customers-card"  style="background-image: url('/img/springs.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney Springs Park</h5>
+                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney Springs</h5>
                 </div>
               </div>
 
@@ -444,7 +444,7 @@
               <div class="card info-card customers-card"  style="background-image: url('/img/lagoon.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Typhoon Lagoon Water Park </h5>
+                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Typhoon Lagoon</h5>
                 </div>
               </div>
 
@@ -457,7 +457,7 @@
               <div class="card info-card customers-card"  style="background-image: url('/img/blizzard.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Blizzard Beach Water Park</h5>
+                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Blizzard Beach</h5>
                 </div>
               </div>
 
