--- a/WaltDisneyManagement/src/main/resources/templates/index.html
+++ b/WaltDisneyManagement/src/main/resources/templates/index.html
@@ -45,7 +45,7 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="/" class="logo d-flex align-items-center">
         <img src="/img/disneylogo.png" alt="">
         <span class="d-none d-lg-block">Walt Disney Management</span>
       </a>
@@ -277,7 +277,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/index}">
+        <a class="nav-link" th:href="@{/}">
           <i class="bi bi-grid"></i>
           <span>Home</span>
         </a>
