--- a/WaltDisneyManagement/src/main/resources/templates/index.html
+++ b/WaltDisneyManagement/src/main/resources/templates/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dashboard - NiceAdmin Bootstrap Template</title>
+  <title>Walt Disney Management</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="/img/favicon.png" rel="icon">
+  <link href="/img/disney.png" rel="icon">
   <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -45,10 +45,12 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="/" class="logo d-flex align-items-center">
-        <img src="/img/disneylogo.png" alt="">
-        <span class="d-none d-lg-block">Walt Disney Management</span>
-      </a>
+      <div class="logo d-flex align-items-center">
+        <a href="index.html" class="d-flex align-items-center">
+          <img src="/img/disneylogo.png" alt="">
+          <span class="d-none d-lg-block" style="font-size: 15px; margin-left: 5px; margin-right: 15px;">Walt Disney Management</span>
+        </a>
+      </div>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
