--- a/WaltDisneyManagement/src/main/resources/templates/login.html
+++ b/WaltDisneyManagement/src/main/resources/templates/login.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Walt Disney Management</title>
 
     <!-- Favicons -->
-    <link href="/img/favicon.png" rel="icon">
+    <link href="/img/disney.png" rel="icon">
     <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
